fix: game description overflowing container

--- a/next-js-frontend/src/styles/styles.scss
+++ b/next-js-frontend/src/styles/styles.scss
@@ -83,3 +83,12 @@ body {
 .navbar ~ div {
     margin-bottom: 16px; // add margin to separe content from the footer (mb-3)
 }
+
+// makes pre tag wrap
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
